Start to merge Map object into ServerDefinition

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ security.user.name=user
 
 logging.level.devbury=DEBUG
 
+spring.http.multipart.max-file-size=1000Mb
+spring.http.multipart.max-request-size=1000Mb
+
+
+worldmanager.defaultWhitelist=Guibourtia,gevena,zuija
